# DebateFlow

./: .env.example  .gitignore  PLAN.md  README.md  SPEC.md  TELEGRAM-JUDGING-SPEC.md  VOICE-SPEC.md  agreement.py  annotate.html  cli.py  compile.py  dataset_card.py  generator.py  models.py  prompts.py  providers.py  publish.py  pyproject.toml  resolutions.yaml  server.py
output/annotations/: 0003dc00_SP.json  0003dc00_ZP.json  0b5d6d8d_SP.json  1c2e57af_SP.json  34e19989_SP.json  3da1bb98_SP.json  49de8ff5_SP.json  50deb68d_SP.json  650923d2_SP.json  6cfb386d_SP.json  74af09b6_SP.json  81b4683b_SP.json  88562f80_SP.json
output/debates/: 0003dc00.json  0b5d6d8d.json  1c2e57af.json  34e19989.json  3d071f39.json  3da1bb98.json  49de8ff5.json  50deb68d.json  650923d2.json  654fa2c2.json  697f0f7d.json  6cfb386d.json  74af09b6.json  81b4683b.json  871a2a96.json  88562f80.json  8e62c125.json  9675deb8.json  9856f3f7.json  9c8ecef1.json  a0414a53.json  ad1adc3d.json  afdd4868.json  b09dc87e.json  b312b550.json  c39d0291.json  c74f6e16.json  cb8c814e.json  cec2cb75.json  d48faccc.json  d495a723.json  e993e8bd.json  ed0948d8.json  f138dbb7.json  f710cea7.json  f8a64fe3.json
plans/: PLAN.md  TELEGRAM-BOT-PLAN.md  TELEGRAM-JUDGING-SPEC.md  VOICE-SPEC.md
src/debateflow/: __init__.py  __main__.py  agreement.py  cli.py  compile.py  dataset_card.py  generator.py  models.py  prompts.py  providers.py  publish.py  server.py  telegram_bot.py  telegram_judging.py  voice.py
src/debateflow/static/: annotate.html  review.html
tests/: test_models.py  test_prompts.py
